# RMC20

./: .gitignore  README.md  loc.cpp  rwar  test1.cpp
catkin_ws/devel/: .catkin
catkin_ws/install/: .rosinstall  local_setup.sh  setup.sh
catkin_ws/src/: backup
catkin_ws/src/framework/: CMakeLists.txt  tmp.txt
catkin_ws/src/framework/include/: FunctionList.h  JumpTable.h  Keyboard.h  a.out
catkin_ws/src/framework/src/: MoveFunction.cpp  ROSTable.cpp  main.cpp
catkin_ws/src/framework_test/: CMakeLists.txt
catkin_ws/src/framework_test/src/: Emoji_Sender.cpp
docs/: CODEOWNERS
gcs_code/: README.md  client  client.cpp  heartbeat.cpp  loc.cpp  socket  socket.cpp
gcs_code/TextSystem/: setup.txt
gcs_code/devel/: .catkin  local_setup.sh  setup.sh
gcs_code/install/: setup.sh
gcs_code_py/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
gcs_code_py/src/: ROSTable.py  funcs.py  jumptable.py  main_bin.py  main_gcs.py
nuc_code/: aptag_all_values.py  aptag_optimized.py  distance.py
nuc_code/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
nuc_code/install/: .rosinstall  _setup_util.py
robot_code/: Feather_Test.ino
robot_code/PID/: PID.cpp  PID.h
robot_code/basic_lidar/: basic_lidar.ino
robot_code/drive_esp/: Feather_Test.ino  KeyManager.py  Lidar.h  ProtoSub.py  arduino_secrets.h  drive_esp.ino  drive_esp_new.ino  drive_esp_py.py  testSerial.ino
robot_code/drive_feather/: Sub.py
robot_code/drive_teensy/: drive_teensy.ino
robot_code/drum_esp/: drum_esp.ino
robot_code/drum_teensy/: PID.cpp  drum_teensy.ino  (+2 more)
(+267 files in other folders)
